# castka-slovy

./: LICENSE  README.md
.claude/: settings.local.json
javascript/: index.d.ts  index.js  package.json
python/: pyproject.toml
python/castka_slovy/: __init__.py  core.py
