[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "castka-slovy"
version = "0.1"
description = "Převod číselné částky na slova v češtině / Convert monetary amounts to Czech words"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["castka", "slovy", "cisla", "text", "penize", "prevod", "cesky", "czech", "currency"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent; Microslop",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["castka_slovy*"]
